--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -14,8 +14,11 @@
           <li class="nav__item"><a href="#" class="nav__link">Контакты</a></li>
         </ul>
       </nav>
+      <button class="burger btn-reset">
+        <span class="burger__line"></span>
+      </button>
       <div class="cart header__cart">
-        <button class="btn-reset cart__btn">
+        <button class="btn-reset cart__btn cart__btn--inactive">
           <svg>
             <use xlink:href="img/sprite.svg#cart"></use>
           </svg>
@@ -24,60 +27,6 @@
         <div class="mini-cart">
           <div class="mini-cart__top" data-simplebar>
             <ul class="mini-cart__list list-reset">
-              <!-- <li class="mini-cart__item">
-                <article class="mini-cart__product mini-product">
-                  <div class="mini-product__image">
-                    <img src="img/product-image.jpg" alt="">
-                  </div>
-                  <div class="mini-product__content">
-                    <div class="mini-product__text">
-                      <h3 class="mini-product__title">Женские кроссовки Puma Force 1 Shadow</h3>
-                      <span class="mini-product__price">8 678 р</span>
-                    </div>
-                    <button class="btn-reset mini-product__delete" aria-label="Удалить товар">
-                      <svg>
-                        <use xlink:href="img/sprite.svg#trash"></use>
-                      </svg>
-                    </button>
-                  </div>
-                </article>
-              </li>
-              <li class="mini-cart__item">
-                <article class="mini-cart__product mini-product">
-                  <div class="mini-product__image">
-                    <img src="img/product-image.jpg" alt="">
-                  </div>
-                  <div class="mini-product__content">
-                    <div class="mini-product__text">
-                      <h3 class="mini-product__title">Женские кроссовки Puma Force 1 Shadow</h3>
-                      <span class="mini-product__price">8 678 р</span>
-                    </div>
-                    <button class="btn-reset mini-product__delete" aria-label="Удалить товар">
-                      <svg>
-                        <use xlink:href="img/sprite.svg#trash"></use>
-                      </svg>
-                    </button>
-                  </div>
-                </article>
-              </li>
-              <li class="mini-cart__item">
-                <article class="mini-cart__product mini-product">
-                  <div class="mini-product__image">
-                    <img src="img/product-image.jpg" alt="">
-                  </div>
-                  <div class="mini-product__content">
-                    <div class="mini-product__text">
-                      <h3 class="mini-product__title">Женские кроссовки Puma Force 1 Shadow</h3>
-                      <span class="mini-product__price">8 678 р</span>
-                    </div>
-                    <button class="btn-reset mini-product__delete" aria-label="Удалить товар">
-                      <svg>
-                        <use xlink:href="img/sprite.svg#trash"></use>
-                      </svg>
-                    </button>
-                  </div>
-                </article>
-              </li> -->
             </ul>
           </div>
           <div class="mini-cart__bottom">
