--- a/src/partials/modals.html
+++ b/src/partials/modals.html
@@ -141,9 +141,9 @@
         </div>
       </div>
       <form class="cart-modal__form">
-        <input type="text" class="input cart-modal__input" name="name" placeholder="Ваше имя">
-        <input type="tel" class="input cart-modal__input" name="tel" placeholder="Номер телефона">
-        <input type="email" class="input cart-modal__input" name="email" placeholder="E-mail">
+        <input type="text" class="input cart-modal__input" name="name" placeholder="Ваше имя" data-validate-field="name">
+        <input type="tel" class="input cart-modal__input" name="tel" placeholder="Номер телефона" data-validate-field="phone">
+        <input type="email" class="input cart-modal__input" name="email" placeholder="E-mail" data-validate-field="email">
         <button class="btn-reset btn btn--primary cart-modal__btn">Оформить заказ</button>
       </form>
     </div>
