--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -280,3 +280,14 @@ a {
     color: var(--color-gray);
   }
 }
+
+.form-label {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.js-validate-error-label {
+  order: -1;
+}
