--- a/src/scss/components/_prod-modal.scss
+++ b/src/scss/components/_prod-modal.scss
@@ -1,5 +1,13 @@
 @import "../mixins";
 
+.modal {
+  @include tablet {
+    &::before {
+      display: none;
+    }
+  }
+}
+
 .prod-modal {
   border-radius: 4px;
   padding: var(--main-offset);
@@ -7,12 +15,21 @@
 
   .modal__close {
     display: none;
+
+    @include small-tablet {
+      z-index: 100;
+      display: block;
+    }
   }
 
   &__top {
     display: flex;
     justify-content: space-between;
     margin-bottom: var(--main-offset);
+
+    @include small-tablet {
+      flex-direction: column;
+    }
   }
 
   &__bottom {
@@ -30,6 +47,11 @@
       height: 100%;
       object-fit: cover;
     }
+  }
+
+  @include tablet {
+    margin: 0;
+    width: 100%;
   }
 }
 
@@ -49,6 +71,12 @@
       object-fit: cover;
     }
   }
+
+  @include small-tablet {
+    margin-right: 0;
+    margin-bottom: 30px;
+    width: 100%;
+  }
 }
 
 .modal-info {
@@ -65,10 +93,23 @@
     font: var(--middle-book);
     line-height: 16px;
     color: var(--color-gray);
+
+    @include mobile {
+      flex-direction: column;
+    }
   }
 
   &__vendor {
     margin-right: var(--main-offset);
+
+    @include tablet {
+      margin-right: 10px;
+    }
+
+    @include mobile {
+      margin-right: 0;
+      margin-bottom: 10px;
+    }
   }
 
   &__quantity {
@@ -117,6 +158,15 @@
 
   &__order {
     margin-top: auto;
+    width: 100%;
+
+    @include small-tablet {
+      margin-top: 30px;
+    }
+  }
+
+  @include small-tablet {
+    margin: 0;
     width: 100%;
   }
 }
@@ -205,6 +255,15 @@
     &:first-child {
       margin-right: var(--second-offset);
     }
+
+    @include small-tablet {
+      width: 100%;
+
+      &:first-child {
+        margin-right: 0;
+        margin-bottom: 30px;
+      }
+    }
   }
 
   &__title {
@@ -219,5 +278,9 @@
     max-width: 450px;
     font: var(--middle-book);
     color: var(--color-main);
+  }
+
+  @include small-tablet {
+    display: block;
   }
 }
