--- a/src/scss/components/_quiz.scss
+++ b/src/scss/components/_quiz.scss
@@ -40,6 +40,10 @@
 
   &__label {
     display: inline-block;
+
+    @include mobile {
+      width: 100%;
+    }
   }
 
   &__message {
@@ -51,6 +55,10 @@
     color: var(--color-cameo);
     background-color: var(--color-white);
     resize: none;
+
+    @include mobile {
+      width: 100%;
+    }
   }
 
   &__answers {
@@ -63,11 +71,21 @@
     @include small-tablet {
       gap: var(--second-offset);
     }
+
+    @include mobile {
+      display: block;
+    }
   }
 
   &__item {
     img {
       margin-bottom: var(--small-offset);
+    }
+
+    @include mobile {
+      &:not(:last-child) {
+        margin-bottom: 30px;
+      }
     }
   }
 
@@ -83,6 +101,10 @@
   justify-content: space-between;
   border-top: 1px solid var(--color-jumbo);
   padding-top: var(--second-offset);
+
+  @include mobile {
+    display: block;
+  }
 }
 
 .last-question {
